# irc_rs

./: .gitignore  CLAUDE.md  README.md  irc_rs.code-workspace
.github/: copilot-instructions.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  message.rs  server.rs
shared/: Cargo.toml
