[package]
name = "client"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
log = "0.4.14"
env_logger = "0.9.0"
rustyline = "9.1.2"
tui = "0.18"
crossterm = "0.23"
quit = "1.1.4"
